# libugds

./: .gitignore  README.md  endian.c  meson.build  ugds.c
include/ugds/: endian.h  hashtbl.h  string.h  symbol.h  vector.h
